erDiagram
    USERS ||--o{ SLIDER_CONTENT : "manages"
    USERS ||--o{ OFFICIALS : "manages"
    USERS ||--o{ NOTIFICATIONS : "manages"
    USERS ||--o{ EVENTS : "manages"
    USERS ||--o{ SITE_SETTINGS : "manages"
    
    USERS {
        int id PK
        varchar username UK
        varchar email UK
        int role_id FK
    }
    
    SLIDER_CONTENT {
        int id PK
        varchar image_path "Path to slider image"
        varchar title "Slide title"
        varchar subtitle "Slide subtitle"
        varchar button_text "CTA button text"
        varchar button_link "CTA button URL"
        int display_order "Sort order"
        boolean is_active "Active status"
        timestamp created_at
        timestamp updated_at
        int updated_by FK "References users.id"
    }
    
    OFFICIALS {
        int id PK
        varchar name "Official name"
        varchar designation "Official position"
        varchar photo_path "Path to photo"
        int display_order "Sort order"
        boolean is_active "Active status"
        timestamp created_at
        timestamp updated_at
        int updated_by FK "References users.id"
    }
    
    NOTIFICATIONS {
        int id PK
        text content "Notification content"
        varchar icon "FontAwesome icon class"
        boolean is_active "Active status"
        date display_date "Display date"
        timestamp created_at
        timestamp updated_at
        int updated_by FK "References users.id"
    }
    
    EVENTS {
        int id PK
        varchar title "Event title"
        text description "Event description"
        date event_date "Event date"
        varchar event_month "Extracted month"
        int event_day "Extracted day"
        boolean is_active "Active status"
        timestamp created_at
        timestamp updated_at
        int updated_by FK "References users.id"
    }
    
    SITE_SETTINGS {
        int id PK
        varchar setting_key UK "Unique setting key"
        text setting_value "Setting value"
        varchar setting_type "text, json, boolean, etc"
        text description "Setting description"
        timestamp updated_at
        int updated_by FK "References users.id"
    }
